# ml-project

./: README.md  environment.yml  pyproject.toml
src/: data.py  model.py
tests/: dos_2_elems.ipynb  dos_prediction.ipynb  tetris_gate.py  tetris_gnn.py  tetris_polynomial.py
tests/data/: data_alloy.csv  idx_test.txt  idx_train.txt  idx_valid.txt
