[tool.poetry]
name = "mlproject"
version = "0.1.0"
description = ""
authors = ["nguyed99 <nguyed99@physik.fu-berlin.de>"]
readme = "README.md"

[[tool.poetry.source]]
name = "torch"
url = "https://data.pyg.org/whl/torch-2.0.0+cpu.html"
priority = "supplemental"

[[tool.poetry.source]]
name = "torch-geometric"
url = "https://pytorch-geometric.com/whl/torch-2.0.0+cpu.html"
priority = "supplemental"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "~1.24"
matplotlib = "^3.8.2"
scikit-learn = "~1.3"
scipy = "~1.8"
torch = "2.0.0"
torchmetrics = "1.2.0"
ase = "^3.22.1"
notebook = "^7.0.6"
e3nn = "^0.5.1"
plotly = "^5.18.0"
torch-spline-conv = {version = "^1.2.2+pt20cpu", source = "torch-geometric"}
torch-sparse = {version = "^0.6.18+pt20cpu", source = "torch-geometric"}
torch-cluster = {version = "^1.6.3+pt20cpu", source = "torch-geometric"}
torch-scatter = {version = "^2.1.2+pt20cpu", source = "torch-geometric"}
torch-geometric = "^2.4.0"
pandas = "^2.1.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
yapf = "^0.40.2"
pre-commit = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# disable line-length lint since it is handled by yapf
ignore = ["E501"]
line-length = 118

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
allow_split_before_dict_value = false